--- a/tasks/subtasks/install.yml
+++ b/tasks/subtasks/install.yml
@@ -24,20 +24,20 @@
         name: "*"
         update_cache: true
         state: latest
-      when: ansible_distribution in ["Fedora", "CentOS"]
+      when: ansible_distribution in ["Fedora", "CentOS", "AlmaLinux"]
 
     - name: Install "wireguard-tools" package on Fedora/CentOS
       ansible.builtin.dnf:
         name: wireguard-tools
         state: latest
-      when: ansible_distribution in ["Fedora", "CentOS"]
+      when: ansible_distribution in ["Fedora", "CentOS", "AlmaLinux"]
 
     - name: Add the wireguard module and make sure it is loaded after reboots for Fedora/CentOS
       community.general.modprobe:
         name: wireguard
         state: present
         persistent: present
-      when: ansible_distribution in ["Fedora", "CentOS"]
+      when: ansible_distribution in ["Fedora", "CentOS", "AlmaLinux"]
 
     - name: Install python3-sqlalchemy on Debian/Ubuntu
       ansible.builtin.apt:
@@ -49,7 +49,7 @@
       ansible.builtin.dnf:
         name: python3-sqlalchemy
         state: latest
-      when: ansible_distribution in ["Fedora", "CentOS"]
+      when: ansible_distribution in ["Fedora", "CentOS", "AlmaLinux"]
 
     - name: Install "Nginx" package on Debian/Ubuntu
       ansible.builtin.apt:
@@ -61,7 +61,7 @@
       ansible.builtin.dnf:
         name: nginx
         state: latest
-      when: ansible_distribution in ["Fedora", "CentOS"]
+      when: ansible_distribution in ["Fedora", "CentOS", "AlmaLinux"]
 
     - name: Copy over Replacement nginx.conf for Fedora/CentOS
       template:
@@ -70,7 +70,7 @@
         mode: u=rw,g=r,o=r
         owner: root
         group: root
-      when: ansible_distribution in ["Fedora", "CentOS"]
+      when: ansible_distribution in ["Fedora", "CentOS", "AlmaLinux"]
 
     - name: Download WG UI
       ansible.builtin.unarchive:
