--- a/tasks/subtasks/check_supported.yml
+++ b/tasks/subtasks/check_supported.yml
@@ -24,3 +24,15 @@
         msg: "Im sorry, currently {{ ansible_architecture }} architecture is not supported yet"
       when: >
         ansible_architecture not in ['x86_64']
+
+    - name: Confirm Unsupported OS
+      pause:
+        prompt: "{{ ansible_distribution }} is not officially supported by PiHole, continue? (yes/no)"
+      register: confirm_ok_distro
+      when: >
+        ansible_distribution in ["AlmaLinux"]
+
+    - name: Exit
+      ansible.builtin.fail:
+        msg: "Ok exiting..."
+      when: "confirm_ok_distro.user_input | bool == false"
