--- a/tasks/subtasks/check_supported.yml
+++ b/tasks/subtasks/check_supported.yml
@@ -17,7 +17,7 @@
         msg: "I'm sorry your OS or Version has not been tested yet"
       when: >
         ansible_distribution not in ["Debian", "Ubuntu", "Fedora", "CentOS", "AlmaLinux"] or
-        ansible_distribution_version not in ["12", "22.04", "38", "9", "9.2"]
+        ansible_distribution_version not in ["12", "22.04", "24.04", "38", "9", "9.2"]
 
     - name: Check if OS Arch is supported
       ansible.builtin.fail:
